[vim] add development environment setup for vim

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -20,7 +20,7 @@
 
 
 [commit]
-    template = /Users/zhongxiao.yzx/.git-commit-template
+    template = ~/.git-commit-template
 
 [alias]
     logx = log --all --pretty=fuller --graph
