[binarysize] add tools for binary size analyzer
https://chromium.googlesource.com/chromium/src.git/+/63.0.3235.1/tools/binary_size/

https://chromium.googlesource.com/chromium/src.git/+/refs/heads/main/tools/binary_size#Binary-Size-Gerrit-Plugin

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,10 +18,12 @@
 [diff]
     tool = vimdiff
 
-
 [commit]
     template = ~/.git-commit-template
 
 [alias]
     logx = log --all --pretty=fuller --graph
     icommit = -c user.email='zhongxiao.yzx@gmail.com' commit --author='zhongxiao.yzx<zhongxiao.yzx@gmail.com>'
+
+[mergetool]
+	keepBackup = false
