[coverage] update coverage report script

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -27,3 +27,8 @@
 
 [mergetool]
 	keepBackup = false
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
