[libtorch] add torch-builder to compile native lib(libtorch)

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,6 @@
 [user]
-    name = yaozhongxiao
-    email = yaozhongxiao@bytedance.com
-    #email = zhongxiao.yzx@gmail.com
+    name = zhongxiao.yzx
+    email = zhongxiao.yzx@gmail.com
 
 [color]
     ui = auto
