--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -13,6 +13,12 @@
 
 [merge]
     tool = vimdiff
+    trustExitCode = true
+    conflictStyle = diff3
+
+[mergetool "vimdiff"]
+    cmd = "vim -d -c '4wincmd w | wincmd J | wincmd =' $LOCAL $BASE $REMOTE $MERGED"
+    keepBackup = false
 
 [diff]
     tool = vimdiff
@@ -24,9 +30,6 @@
     logx = log --all --pretty=fuller --graph
     logs = log --pretty=format:'%C(auto)%ad %h %<(15,trunc)%C(auto)%an %C(auto)%d %s'
     icommit = -c user.email='zhongxiao.yzx@gmail.com' commit --author='zhongxiao.yzx<zhongxiao.yzx@gmail.com>'
-
-[mergetool]
-	keepBackup = false
 
 [filter "lfs"]
 	process = git-lfs filter-process
